[gd_scene load_steps=2 format=2]

[ext_resource path="res://Network/NetworkSetup.gd" type="Script" id=1]

[node name="network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 38.0
margin_top = 74.0
margin_right = 38.0
margin_bottom = 74.0
script = ExtResource( 1 )

[node name="configuration" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="create_server" type="Button" parent="configuration"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -10.0
margin_right = 70.0
margin_bottom = 21.0
mouse_default_cursor_shape = 2
text = "Create a server"

[node name="join_server" type="Button" parent="configuration"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = 39.0
margin_right = 70.0
margin_bottom = 70.0
mouse_default_cursor_shape = 2
text = "Join server"

[node name="server_ip_adress" type="LineEdit" parent="configuration"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.0
margin_top = -35.0
margin_right = 103.0
margin_bottom = -4.0
align = 1
placeholder_text = "Enter IP adress"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="device_ip_adress" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_bottom = 136.0
align = 1

[connection signal="pressed" from="configuration/create_server" to="." method="_on_create_server_pressed"]
[connection signal="pressed" from="configuration/join_server" to="." method="_on_join_server_pressed"]
